Naming, added tone and noTone

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,29 @@
 cmake_minimum_required(VERSION 2.8)
 set(CMAKE_CXX_FLAGS "-std=c++98")
-set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build")
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build")
 file(DOWNLOAD
- "https://raw.githubusercontent.com/octoblu/cmake-external-project-utils/master/external-project-utils.cmake"
- "${CMAKE_MODULE_PATH}/external-project-utils.cmake"
-)
+        "https://raw.githubusercontent.com/octoblu/cmake-external-project-utils/master/external-project-utils.cmake"
+        "${CMAKE_MODULE_PATH}/external-project-utils.cmake"
+        )
 
 include(external-project-utils)
 
-project (arduino-mock)
+project(arduino-mock)
 
 file(GLOB HEADER_FILES *.h)
 
 add_library(arduino-mock STATIC "src/ArduinoMockAll.cc" ${HEADER_FILES})
 
-option(EXTERNAL_GMOCK "Download GMock" OFF)
-if(EXTERNAL_GMOCK)
+if (NOT TARGET gtest)
     getExternalProject("gtest" "https://googletest.googlecode.com/files/gtest-1.7.0.zip")
+endif ()
+if (NOT TARGET gmock)
     getExternalProject("gmock" "https://googlemock.googlecode.com/files/gmock-1.7.0.zip")
-endif()
+endif ()
 
-include_directories( arduino-mock
-  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
-)
+include_directories(arduino-mock
+        PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
+        )
 
 set_target_properties(arduino-mock PROPERTIES ENABLE_EXPORTS true)
 
@@ -32,6 +33,6 @@ linkExternalProject(arduino-mock "gmock")
 option(test "Build all tests." OFF)
 
 if (test)
-  enable_testing()
-  add_subdirectory(test)
-endif()
+    enable_testing()
+    add_subdirectory(test)
+endif ()
