--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ CMakeCache.txt
 CMakeFiles
 cmake_install.cmake
 install_manifest.txt
+Makefile
 
 #ignore thumbnails created by windows
 Thumbs.db
